--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.1",
+    "immer": "^9.0.1",
+    "ini": "^1.3.8",
     "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.14.0",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "serialize-javascript": "^3.1.0",
+    "typescript": "^2.9.2"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
