--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^16.14.0",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "serialize-javascript": "^3.1.0",
     "typescript": "^2.9.2"
   },
